@@ -1,3 +1,8 @@
+2003-04-25  Dominik Vogt  <dominik.vogt@gmx.de>
+
+	* fvwm/menus.c (do_menu):
+	the NoWarp position hint option works with root menus too
+
 2003-04-04  Dominik Vogt  <dominik.vogt@gmx.de>
 
 	* fvwm/focus.c (restore_focus_after_unmap):
